# infoviz_assignment_2

./: app.py  data_inspection.ipynb  pyproject.toml
static/data/: agriRuralDevelopment_clean.csv
static/js/: linechart.js  main.js  map.js  scatter.js
static/styles/: style.css
templates/: index.html
