[project]
name = "infovisue-2026s-exercise2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.3",
    "flask==2.2.2",
    "ipykernel>=7.2.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "joblib==1.2.0",
    "markupsafe==2.1.2",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "python-dateutil==2.8.2",
    "pytz==2022.7.1",
    "scikit-learn==1.2.1",
    "scipy==1.10.0",
    "six==1.16.0",
    "sklearn==0.0",
    "threadpoolctl==3.1.0",
    "werkzeug==2.2.2",
]
